# stm32f407g-diymore

./: .gitignore  Cargo.toml  README.md  openocd.cfg  openocd.gdb  qemu-cargo-run.sh
examples/: gpio_hal_blinky.rs  gpio_hal_busy_blinky.rs  gpio_hal_button.rs  gpio_hal_button_blinky.rs  itm.rs  semihosting.rs  serial_echo.rs  serial_panic.rs
src/: led.rs  lib.rs  pushbtn.rs
tools/: qemu-runner.sh
