[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>", "Enrik Berkhan <Enrik.Berkhan@inka.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F407G diymore microcontroller board"
#documentation = "https://docs.rs/crate/stm32f407g-disc"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "stm32f407g-diymore"
repository = "https://github.com/enrikb/stm32f407g-diymore"
version = "0.1.0"
readme = "README.md"
autotests = false

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f407"]
version = "0.8.2"

[dev-dependencies]
nb = "0.1"
panic-halt = "0.2"
panic-itm = "0.4"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[dependencies.panic-itm]
version = "0.4.1"
